--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <center>
         <h1>Hello World!</h1>
-        <p>Welcome to my website</p>
+        <p>Welcome to my website!</p>
         </center>
     </body>
 </html>
